# divvun-worker-static

./: Cargo.toml  Dockerfile  Justfile  index.html  languages.toml
k8s/: deployment.yaml  service.yaml
src/: main.rs
